zmieniłem błędny zapis modyfikacji na elementy

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="container">
           <ul class="informations">
             <li class="informations__box">
-              <div class="informations__icon--box">
+              <div class="informations__icon-box">
                 <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#antenna"></use>
                 </svg>
@@ -101,7 +101,7 @@
               </p>
             </li>
             <li class="informations__box">
-              <div class="informations__icon--box">
+              <div class="informations__icon-box">
                 <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#clock"></use>
                 </svg>
@@ -113,7 +113,7 @@
               </p>
             </li>
             <li class="informations__box">
-              <div class="informations__icon--box">
+              <div class="informations__icon-box">
                 <svg class="informations__icon">
                   <use xlink:href="./images/sprite-svg/icons.svg#diagram"></use>
                 </svg>
@@ -125,7 +125,7 @@
               </p>
             </li>
             <li class="informations__box">
-              <div class="informations__icon--box">
+              <div class="informations__icon-box">
                 <svg class="informations__icon">
                   <use
                     xlink:href="./images/sprite-svg/icons.svg#astronaut"
@@ -144,8 +144,8 @@
       <section class="section">
         <div class="container">
           <h2 class="services__title">Czym się zajmujemy</h2>
-          <ul class="services__table">
-            <li class="services__table--box">
+          <ul class="services">
+            <li class="services__box">
               <img
                 src="images/main-page/img.jpg"
                 alt="Osoba tworzy kod programowy"
@@ -154,7 +154,7 @@
               />
               <p class="services__describe">aplikacje komputerowe</p>
             </li>
-            <li class="services__table--box">
+            <li class="services__box">
               <img
                 src="images/main-page/img-2.jpg"
                 alt="Osoba trzymająca telefon w ręce przegląda design stron aplikacji"
@@ -163,7 +163,7 @@
               />
               <p class="services__describe">aplikacje mobilne</p>
             </li>
-            <li class="services__table--box">
+            <li class="services__box">
               <img
                 src="images/main-page/box-3.jpg"
                 alt="Widoczny na tablecie kolorowy sześciokąt"
@@ -188,7 +188,7 @@
               />
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Product Designer</p>
-              <div class="team__icon--box">
+              <div class="team__icon-box">
                 <svg class="team__icon--item">
                   <use
                     width="20px"
@@ -236,7 +236,7 @@
               />
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Frontend Developer</p>
-              <div class="team__icon--box">
+              <div class="team__icon-box">
                 <svg class="team__icon--item">
                   <use
                     width="20px"
@@ -284,7 +284,7 @@
               />
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">Marketing</p>
-              <div class="team__icon--box">
+              <div class="team__icon-box">
                 <svg class="team__icon--item">
                   <use
                     width="20px"
@@ -332,7 +332,7 @@
               />
               <h3 class="team__name">John Doe</h3>
               <p class="team__profession">UI Designer</p>
-              <div class="team__icon--box">
+              <div class="team__icon-box">
                 <svg class="team__icon--item">
                   <use
                     width="20px"
@@ -377,7 +377,7 @@
       <section class="section">
         <div class="container">
           <h2 class="clients__title">Nasi klienci</h2>
-          <ul class="clients__table">
+          <ul class="clients">
             <li class="clients__box">
               <svg class="clients__logo">
                 <use
@@ -429,7 +429,7 @@
 
     <footer class="footer">
       <div class="container footer__wrapper">
-        <div class="footer__info--box">
+        <div class="footer__info-box">
           <h3>
             <a class="footer__link footer__logo" href="#"
               >Web<span class="footer__span">Studio</span></a
@@ -451,7 +451,7 @@
         </div>
         <div class="join">
           <h3 class="join__title">DOŁĄCZ DO NAS</h3>
-          <div class="join__icon--box">
+          <div class="join__icon-box">
             <svg class="join__icons">
               <use
                 width="20px"
@@ -559,12 +559,12 @@
               cols="66"
             ></textarea>
           </fieldset>
-          <label class="form__label--checkbox">
+          <label class="form__label-checkbox">
             <input
-              class="form__input--checkbox"
+              class="form__input-checkbox"
               type="checkbox"
               name="checkbox"
-            /><span class="form__text--checkbox"
+            /><span class="form__text-checkbox"
               >Oświadczam iz akceptuje
               <a class="form__text--link" href="">Regulamin</a> i
               <a class="form__text--link" href="">Politykę Prywatności</a></span
