--- a/portfolio.html
+++ b/portfolio.html
@@ -286,7 +286,7 @@
 
     <footer class="footer">
       <div class="container footer__wrapper">
-        <div class="footer__info--box">
+        <div class="footer__info-box">
           <h3>
             <a class="footer__link footer__logo" href="index.html"
               >Web<span class="footer__span">Studio</span></a
@@ -308,7 +308,7 @@
         </div>
         <div class="join">
           <h3 class="join__title">DOŁĄCZ DO NAS</h3>
-          <div class="join__icon--box">
+          <div class="join__icon-box">
             <svg class="join__icons">
               <use
                 width="20px"
